--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 	<title>慈园阁</title>
 	<link rel="stylesheet" type="text/css" href="css/lunbo.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
-	<style type="text/css">
-
-	</style>
+	<link rel="stylesheet" type="text/css" href="css/nav.css">
 </head>
 <body>
 	<div class="home">
@@ -24,15 +22,15 @@
 					<li><a href="">手机版 <img src="images/shouji.jpg" alt=""></a></li>
 				<li class="head-nav"><a href="">联系客服 <img src="images/xiala.jpg" alt=""></a>
 					    <ul>
-					    	<li><a href="">会员</a></li>
-					    	<li><a href="">会员</a></li>
+					    	<li><a href="">联系客服</a></li>
+					    	<li><a href="">联系客服</a></li>
 					    </ul>
 			   </li>
 					<li><a href=""><img src="images/gouwu.jpg" alt="" style="float: left;"> 购物车0件</a></li>
 				<li class="head-nav"><a href="">会员中心 <img src="images/xiala.jpg" alt=""></a>
 					   <ul>
-					    	<li><a href="">会员</a></li>
-					    	<li><a href="">会员</a></li>
+					    	<li><a href="">会员中心</a></li>
+					    	<li><a href="">会员中心</a></li>
 					   </ul>
 				</li>
 				</ul>
@@ -45,7 +43,7 @@
 		 </div>	
 		 <div class="nav">
 		 	<ul>
-		 		<li><a href="">本命佛</a></li>
+		 		<li class="active"><a href="">本命佛</a></li>
 		 		<li><a href="">生肖吉祥物</a></li>
 		 		<li><a href="">生肖运势</a></li>
 		 		<li><a href="">开运貔貅</a></li>
@@ -192,22 +190,12 @@
 		 	 	</div>
 		 	 </div>
 		 </footer>
-		 <p style="text-align: center;color:#888888;">慈园阁十二生肖本命佛</p><br/>
+		 <p class="footer-end">慈园阁十二生肖本命佛</p><br/>
 	</div>
 	<script type="text/javascript" src="js/jquery-3.1.1.js"></script>
 	<script type="text/javascript" src="js/jquery.glide.min.js"></script>
+	<script type="text/javascript" src="js/index.js"></script>
 	<script type="text/javascript">
-	    $(function(){
-	    	$('.head-nav').mouseover(function(){
-	    		$(this).children('ul').show()
-	    	})
-	    	$('.head-nav').mouseout(function(){
-	    		$(this).children('ul').hide()
-	    	})
-	    })
-
-
-
 			var glide = $('.slider').glide({
 					//autoplay:true,//是否自动播放 默认值 true如果不需要就设置此值
 					animationTime:500, //动画过度效果，只有当浏览器支持CSS3的时候生效
