--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
              <div class="slider">
 	              <ul class="slides">
 		             <li class="slide">
-			     <div class="section-1-box1"></div>
+			     <div class="section-1-box-1"></div>
 		             </li>
 		             <li class="slide">
-			     <div class="section-1-box2"></div>
+			     <div class="section-1-box-2"></div>
 		             </li>
 		             <li class="slide">
-			     <div class="section-1-box3"></div>
+			     <div class="section-1-box-3"></div>
 		             </li>
 		              <li class="slide">
-			     <div class="section-1-box4"></div>
+			     <div class="section-1-box-4"></div>
 		             </li>
 	             </ul>
                </div>
@@ -76,6 +76,50 @@
 		 </div>
 		 <div class="section-3">
 		 	<!--主页图-->
+		 	<div class="section-3-box">
+		 	   <div class="section-cp-box">
+		 	       <a href=""><img src="images/jiaju/1056156165.jpg" alt=""></a>  <!--产品图-->
+		 	       <div class="section-cp-box-jg">    <!--产品价格背景图-->               
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a><br/>
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a>
+		 	       </div>
+		 	   </div>
+		 	   <div class="section-cp-box">
+		 	       <a href=""><img src="images/jiaju/1056156165.jpg" alt=""></a>  <!--产品图-->
+		 	       <div class="section-cp-box-jg">    <!--产品价格背景图-->               
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a><br/>
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a>
+		 	       </div>
+		 	   </div>
+		 	   <div class="section-cp-box">
+		 	       <a href=""><img src="images/jiaju/1056156165.jpg" alt=""></a>  <!--产品图-->
+		 	       <div class="section-cp-box-jg">    <!--产品价格背景图-->               
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a><br/>
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a>
+		 	       </div>
+		 	   </div>
+		 	   <div class="section-cp-box">
+		 	       <a href=""><img src="images/jiaju/1056156165.jpg" alt=""></a>  <!--产品图-->
+		 	       <div class="section-cp-box-jg">    <!--产品价格背景图-->               
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a><br/>
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a>
+		 	       </div>
+		 	   </div>
+		 	   <div class="section-cp-box">
+		 	       <a href=""><img src="images/jiaju/1056156165.jpg" alt=""></a>  <!--产品图-->
+		 	       <div class="section-cp-box-jg">    <!--产品价格背景图-->               
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a><br/>
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a>
+		 	       </div>
+		 	   </div>
+		 	   <div class="section-cp-box">
+		 	       <a href=""><img src="images/jiaju/1056156165.jpg" alt=""></a>  <!--产品图-->
+		 	       <div class="section-cp-box-jg">    <!--产品价格背景图-->               
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a><br/>
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a>
+		 	       </div>
+		 	   </div>
+		 	 </div>
 		 </div>
 		 <div class="section-4">
 		 	<!--主页图-->
