--- a/jiaju.html
+++ b/jiaju.html
@@ -49,17 +49,141 @@
 		 		<li><a href="">风水家具</a></li>
 		 		<li><a href="">爱情姻缘</a></li>
 		 	</ul>
-		 </div>
+		 </div>	
 		 <div class="section-1">
 		 	<!--主页图-->
 		 </div>
 		 <!--所有主页内容开始-->
     <div class="content">
-		 <div class="section-2">
-		 	<!--主页图-->
+       <div class="content-box">
+		  <div class="section-2">
+		      <div class="section-2-top">
+		      	<!--标题背景图-->
+		      </div>
+		 	<!--产品主页图-->
+		 	<div class="section-2-box">
+		 	   <div class="section-cp-box">
+		 	       <a href=""><img src="images/jiaju/1056156165.jpg" alt=""></a>  <!--产品图-->
+		 	       <div class="section-cp-box-jg">    <!--产品价格背景图-->               
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a><br/>
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a>
+		 	       </div>
+		 	   </div>
+		 	   <div class="section-cp-box">
+		 	       <a href=""><img src="images/jiaju/1056156165.jpg" alt=""></a>  <!--产品图-->
+		 	       <div class="section-cp-box-jg">    <!--产品价格背景图-->               
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a><br/>
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a>
+		 	       </div>
+		 	   </div>
+		 	   <div class="section-cp-box">
+		 	       <a href=""><img src="images/jiaju/1056156165.jpg" alt=""></a>  <!--产品图-->
+		 	       <div class="section-cp-box-jg">    <!--产品价格背景图-->               
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a><br/>
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a>
+		 	       </div>
+		 	   </div>
+		 	   <div class="section-cp-box">
+		 	       <a href=""><img src="images/jiaju/1056156165.jpg" alt=""></a>  <!--产品图-->
+		 	       <div class="section-cp-box-jg">    <!--产品价格背景图-->               
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a><br/>
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a>
+		 	       </div>
+		 	   </div>
+		 	   <div class="section-cp-box">
+		 	       <a href=""><img src="images/jiaju/1056156165.jpg" alt=""></a>  <!--产品图-->
+		 	       <div class="section-cp-box-jg">    <!--产品价格背景图-->               
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a><br/>
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a>
+		 	       </div>
+		 	   </div>
+		 	   <div class="section-cp-box">
+		 	       <a href=""><img src="images/jiaju/1056156165.jpg" alt=""></a>  <!--产品图-->
+		 	       <div class="section-cp-box-jg">    <!--产品价格背景图-->               
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a><br/>
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a>
+		 	       </div>
+		 	   </div>
+		 	   <div class="section-cp-box">
+		 	       <a href=""><img src="images/jiaju/1056156165.jpg" alt=""></a>  <!--产品图-->
+		 	       <div class="section-cp-box-jg">    <!--产品价格背景图-->               
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a><br/>
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a>
+		 	       </div>
+		 	   </div>
+		 	   <div class="section-cp-box">
+		 	       <a href=""><img src="images/jiaju/1056156165.jpg" alt=""></a>  <!--产品图-->
+		 	       <div class="section-cp-box-jg">    <!--产品价格背景图-->               
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a><br/>
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a>
+		 	       </div>
+		 	   </div>
+		 	 </div>
 		 </div>
 		 <div class="section-3">
 		 	<!--主页图-->
+		 	 <div class="section-3-top">
+		      	<!--标题背景图-->
+		      </div>
+		 	<!--产品主页图-->
+		 	<div class="section-3-box">
+		 	   <div class="section-cp-box">
+		 	       <a href=""><img src="images/jiaju/1056156165.jpg" alt=""></a>  <!--产品图-->
+		 	       <div class="section-cp-box-jg">    <!--产品价格背景图-->               
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a><br/>
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a>
+		 	       </div>
+		 	   </div>
+		 	   <div class="section-cp-box">
+		 	       <a href=""><img src="images/jiaju/1056156165.jpg" alt=""></a>  <!--产品图-->
+		 	       <div class="section-cp-box-jg">    <!--产品价格背景图-->               
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a><br/>
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a>
+		 	       </div>
+		 	   </div>
+		 	   <div class="section-cp-box">
+		 	       <a href=""><img src="images/jiaju/1056156165.jpg" alt=""></a>  <!--产品图-->
+		 	       <div class="section-cp-box-jg">    <!--产品价格背景图-->               
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a><br/>
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a>
+		 	       </div>
+		 	   </div>
+		 	   <div class="section-cp-box">
+		 	       <a href=""><img src="images/jiaju/1056156165.jpg" alt=""></a>  <!--产品图-->
+		 	       <div class="section-cp-box-jg">    <!--产品价格背景图-->               
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a><br/>
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a>
+		 	       </div>
+		 	   </div>
+		 	   <div class="section-cp-box">
+		 	       <a href=""><img src="images/jiaju/1056156165.jpg" alt=""></a>  <!--产品图-->
+		 	       <div class="section-cp-box-jg">    <!--产品价格背景图-->               
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a><br/>
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a>
+		 	       </div>
+		 	   </div>
+		 	   <div class="section-cp-box">
+		 	       <a href=""><img src="images/jiaju/1056156165.jpg" alt=""></a>  <!--产品图-->
+		 	       <div class="section-cp-box-jg">    <!--产品价格背景图-->               
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a><br/>
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a>
+		 	       </div>
+		 	   </div>
+		 	   <div class="section-cp-box">
+		 	       <a href=""><img src="images/jiaju/1056156165.jpg" alt=""></a>  <!--产品图-->
+		 	       <div class="section-cp-box-jg">    <!--产品价格背景图-->               
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a><br/>
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a>
+		 	       </div>
+		 	   </div>
+		 	   <div class="section-cp-box">
+		 	       <a href=""><img src="images/jiaju/1056156165.jpg" alt=""></a>  <!--产品图-->
+		 	       <div class="section-cp-box-jg">    <!--产品价格背景图-->               
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a><br/>
+		 	       	  <a href="">啊啊啊啊啊啊啊啊啊啊啊啊啊</a>
+		 	       </div>
+		 	   </div>
+		 	 </div>
 		 </div>
 		 <div class="section-4">
 		 	<!--主页图-->
@@ -94,6 +218,7 @@
 		 <div class="section-14">
 		 	<!--主页图-->
 		 </div>
+   </div><!--content-box产品结束-->
 		 <div class="section-15">
 		 	<!--主页图-->
 		 </div>
