--- a/cpproduct.html
+++ b/cpproduct.html
@@ -113,15 +113,17 @@
      <div class="content-2">
 		 <div class="section-2">
 		 	<!--主页图-->
+		 	<img src="images/cp/15613213.png" alt="">
 		 </div>
-		 <div class="section-3">
-		 	<!--主页图-->
-		 </div>
+		 <!--<div class="section-3">
+		 	主页图
+		 </div>-->
 	 </div>
 
-	   <div class="section-4">
+	   <div class="section-4"><!--主页背景图-->
 	        <div class="section4-box">
 		 	    <!--主页图-->
+		 	    <img src="images/cp/1651561.jpg" alt="">
 		    </div>
 	   </div>
 	   <div class="section-5">
