--- a/cpproduct.html
+++ b/cpproduct.html
@@ -89,22 +89,22 @@
         			<p><span class="section-1-right-color">开光</span> : 佛教圣地华峰寺</p>
         			<p><span class="section-1-right-color">选择生肖</span> :
         			<div id="section-1-right-span">
-        				<span>鼠</span>
-        				<span>牛</span>
-        				<span>虎</span>
-        				<span>兔</span>
-        				<span>龙</span>
-        				<span>蛇</span>
-        				<span>马</span>
-        				<span>羊</span>
-        				<span>猴</span>
-        				<span>鸡</span>
-        				<span>狗</span>
-        				<span>猪</span>
+        				<span class="section-1-span-sx">鼠</span>
+        				<span class="section-1-span-sx">牛</span>
+        				<span class="section-1-span-sx">虎</span>
+        				<span class="section-1-span-sx">兔</span>
+        				<span class="section-1-span-sx">龙</span>
+        				<span class="section-1-span-sx">蛇</span>
+        				<span class="section-1-span-sx">马</span>
+        				<span class="section-1-span-sx">羊</span>
+        				<span class="section-1-span-sx">猴</span>
+        				<span class="section-1-span-sx">鸡</span>
+        				<span class="section-1-span-sx">狗</span>
+        				<span class="section-1-span-sx">猪</span>
         			</div>
         			</p>
-        			<p class="section-1-right-color"><span>价格</span> : <span class="color-red" style="font-size: 20px;">1398</span>元</p>
-        			<p class="section-1-right-color">功效　:<span style="font-size: 14.5px;">天然树脂天然树脂天然树脂天然树脂天然树脂天然树脂天然树脂天然树脂天然树脂天然树脂天然树脂天然树脂天然树脂天然树脂天然树脂天然树脂</span></p>
+        			<!--<p class="section-1-right-color"><span>价格</span> : <span class="color-red" style="font-size: 20px;">1398</span>元</p>
+        			<p class="section-1-right-color">功效　:<span style="font-size: 14.5px;">天然树脂天然树脂天然树脂天然树脂天然树脂天然树脂天然树脂天然树脂天然树脂天然树脂天然树脂天然树脂天然树脂天然树脂天然树脂天然树脂</span></p>-->
         			    <div class="section-1-btn"><a class="section-1-btnsx" href="">加入购物车</a></div>
         		</div>
         	</div>
