--- a/footer/fwtx.html
+++ b/footer/fwtx.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>慈园阁</title>
-	<link rel="stylesheet" type="text/css" href="css/footer/footerfw.css">
-	<link rel="stylesheet" type="text/css" href="css/nav.css">
+	<link rel="stylesheet" type="text/css" href="../css/footer/fwtx.css">
+	<link rel="stylesheet" type="text/css" href="../css/nav.css">
 </head>
 <body>
 	<div class="home">
@@ -18,15 +18,15 @@
 			</div>
 			<div class="head-right">
 				<ul>
-					<li><a href="">手机版 <img src="images/shouji.jpg" alt=""></a></li>
-				<li class="head-nav"><a href="">联系客服 <img src="images/xiala.jpg" alt=""></a>
+					<li><a href="">手机版 <img src="../images/shouji.jpg" alt=""></a></li>
+				<li class="head-nav"><a href="">联系客服 <img src="../images/xiala.jpg" alt=""></a>
 					    <ul>
 					    	<li><a href="">联系客服</a></li>
 					    	<li><a href="">联系客服</a></li>
 					    </ul>
 			   </li>
-					<li><a href=""><img src="images/gouwu.jpg" alt="" style="float: left;"> 购物车0件</a></li>
-				<li class="head-nav"><a href="">会员中心 <img src="images/xiala.jpg" alt=""></a>
+					<li><a href=""><img src="../images/gouwu.jpg" alt="" style="float: left;"> 购物车0件</a></li>
+				<li class="head-nav"><a href="">会员中心 <img src="../images/xiala.jpg" alt=""></a>
 					   <ul>
 					    	<li><a href="">会员中心</a></li>
 					    	<li><a href="">会员中心</a></li>
@@ -51,42 +51,44 @@
 		 	</ul>
 		 </div>
 		 <div class="content">
-		      <div class="section-1">
-		 	    <!--主页图-->
-		 	    <div class="section-1-box">
-		 	    	<ul>
-		 	    		<li class="footer-nav"><a href="javascript:;">走进慈园阁</a>
-		 	    		    <ul>
-		 	    		    	<li><a href="">品牌介绍</a></li>
-		 	    		        <li><a href="">法师结缘</a></li>
-		 	    		        <li><a href="">联系方式</a></li>
-		 	    		    </ul>
-		 	    		</li>
-		 	    		<li class="footer-nav"><a href="javascript:;">品质保证</a>
-		 	    		    <ul>
-		 	    		    	<li><a href="#">开光证书</a></li>
-		 	    		    </ul>
-		 	    		</li>
-		 	    		<li class="footer-nav"><a href="javascript:;">服务体系</a>
-		 	    		    <ul>
-		 	    		    	<li><a href="javascript:;">最新动态</a></li>
-		 	    		    	<li><a href="#">退换货条款</a></li>
-		 	    		    	<li><a href="#">法师结缘</a></li>
-		 	    		    	<li><a href="#">联系方式</a></li>
-		 	    		    </ul>
-		 	    		</li>
-		 	    		<li class="footer-nav"><a href="javascript:;">其他说明</a>
-		 	    		    <ul>
-		 	    		    	<li><a href="">配送说明及包装方式</a></li>
-		 	    		    	<li><a href="">本命佛包装及附件</a></li>
-		 	    		    	<li><a href="">常见问题解答</a></li>
-		 	    		    </ul>
-		 	    		</li>
-		 	    	</ul>
-		 	    </div>
-		      </div>
+
+         <div class="section-1">
+         <!--导航背景图-->
+             <div class="section-1-box">
+	           <ul>
+		           <li><a href="javascript:;" class="section-1-active">走进慈园阁</a>
+			           <ul class="section-1-active-none">
+			              <li><a href="#">最新动态</a></li>
+				          <li><a href="#">品牌介绍</a></li>
+				          <li><a href="#">法师结缘</a></li>
+				          <li><a href="#">联系方式</a></li>
+			           </ul>
+		           </li>
+		           <li><a href="javascript:;" class="section-1-active">品质保证</a>
+			           <ul class="section-1-active-none">
+				           <li><a href="#">开光证书</a></li>
+			           </ul>
+		           </li>
+		           <li><a href="javascript:;" class="section-1-active">服务体系</a>
+			           <ul class="section-1-active-none">
+				           <li><a href="#">服务承诺</a></li>
+				           <li><a href="#">退换货条款</a></li>
+				           <li><a href="#">服务时间</a></li>
+			           </ul>
+		           </li>
+		           <li><a href="javascript:;" class="section-1-active">其他说明</a>
+			           <ul class="section-1-active-none">
+				           <li><a href="#">配送说明及包装方式</a></li>
+				           <li><a href="#">本命佛包装及附件</a></li>
+				           <li><a href="#">常见问题解答</a></li>
+			           </ul>
+		           </li>
+	           </ul>
+	         </div>
+         </div>
+
 		      <div class="section-2">
-		 	    <!--主页图-->
+		 	    <!--背景图-->
 		 	    <div class="section-2-box">
 		 	    	<p>慈园阁秉承<span class="color-red1">【善为根，信为本】</span>的宗旨，传播善念永远在首位。</p>
 		 	    	<p>慈园阁坚守<span class="color-red1">【真开光】</span>，所有圣品均经过华峰寺开光加持。</p>
@@ -131,13 +133,14 @@
 		 	 	<h4>添加大师微信号 【icyycch845836】</h4>
 		 	 	<div class="footer-box2-wx">
 		 	 		<span class="footer-wx-span">享受一对一大师服务，咨询更多运程，改善个人运势</span>
-		 	 		<img src="images/20170506151701.png" alt="">
+		 	 		<img src="../images/20170506151701.png" alt="">
 		 	 	</div>
 		 	 </div>
 		 </footer>
 		 <p class="footer-end">慈园阁十二生肖本命佛</p><br/>
 	</div>
-	<script type="text/javascript" src="js/jquery-3.1.1.js"></script>
-	<script type="text/javascript" src="js/index.js"></script>
+	<script type="text/javascript" src="../js/jquery-3.1.1.js"></script>
+	<script type="text/javascript" src="../js/index.js"></script>
+	<script type="text/javascript" src="../js/footer.js"></script>
 </body>
 </html>
