--- a/index.html
+++ b/index.html
@@ -51,6 +51,48 @@
 		 		<li><a href="">爱情姻缘</a></li>
 		 	</ul>
 		 </div>
+		   <!--左边固定导航-->
+		 <div class="sx-left">
+		 	<div class="sx-left-top">
+		 	<ul class="sx-left-ul">
+		 	    <li><h4>慈园阁2017年鼠年十二生肖运程</h4></li>
+		 		<li><a href=""><img src="images/nav/1.jpg" alt=""></a></li>
+		 		<li><a href=""><img src="images/nav/2.jpg" alt=""></a></li>
+		 		<li><a href=""><img src="images/nav/3.jpg" alt=""></a></li><br/>
+		 		<li><a href=""><img src="images/nav/4.jpg" alt=""></a></li>
+		 		<li><a href=""><img src="images/nav/5.jpg" alt=""></a></li>
+		 		<li><a href=""><img src="images/nav/6.jpg" alt=""></a></li><br/>
+		 		<li><a href=""><img src="images/nav/7.jpg" alt=""></a></li>
+		 		<li><a href=""><img src="images/nav/8.jpg" alt=""></a></li>
+		 		<li><a href=""><img src="images/nav/9.jpg" alt=""></a></li><br/>
+		 		<li><a href=""><img src="images/nav/10.jpg" alt=""></a></li>
+		 		<li><a href=""><img src="images/nav/11.jpg" alt=""></a></li>
+		 		<li><a href=""><img src="images/nav/12.jpg" alt=""></a></li>
+		 		<li><a class="sx-left-li-x" href="javascript:;">关闭</a></li>
+		 	</ul>
+		 	</div>
+		 </div>
+           <!--右边固定导航-->
+		 <div class="sx-right">
+		 	<div class="sx-right-top">
+		 	<ul class="sx-right-ul-1">
+		 	    <li><h4>免费命理咨询</h4></li>
+		 		<li>慈园阁大师亲算</li>
+		 		<li>微信号12345678</li>		 		
+		 	</ul>
+		 	<ul class="sx-right-ul-2">
+		 	    <li style="color: #f40000;">扫一扫 关注大师号</li>
+		 		<li><h3>我要在线资讯</h3></li>
+		 		<li><h4>免费资讯电话</h4></li>	
+		 		<li><h3>400-0925-55</h3></li>	 		
+		 	</ul>
+		 	<ul class="sx-right-ul-3">
+		 		<li><a class="sx-right-li-top" href="javascript:;">返回顶部</a></li>
+		 	    <li><a class="sx-right-li-x" href="javascript:;">关闭</a></li>
+		    </ul>
+		 	</div>
+		 </div>
+
 		 <div class="section-1">
 		 	<!--主页图-->
              <div class="slider">
